openshift/templates/business-central-template.yaml
apiVersion: "v1"
kind: "Template"
metadata:
  name: "business-central"
objects:
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: ${APP_NAME}
      name: ${APP_NAME}
    name: ${APP_NAME}
  spec:
    host: ${APPLICATION_DOMAIN}
    port:
      targetPort: web
    to:
      kind: Service
      name: ${APP_NAME}
- kind: Service
  apiVersion: v1
  metadata:
    creationTimestamp: null
    name: ${APP_NAME}
  spec:
    portalIP: ""
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: ${APP_NAME}
    sessionAffinity: None
    type: ClusterIP
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: ${APP_NAME}
    labels:
      app: ${APP_NAME}
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ConfigChange
    replicas: 1
    test: false
    selector:
      app: ${APP_NAME}
      deploymentconfig: ${APP_NAME}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APP_NAME}
          deploymentconfig: ${APP_NAME}
        annotations:
      spec:
        containers:
          - name: ${APP_NAME}
            image: 'vizuri/brms-business-central:latest'
            ports:
              - containerPort: 9990
                protocol: TCP
              - containerPort: 9999
                protocol: TCP
              - containerPort: 8080
                protocol: TCP
            resources: {}
            terminationMessagePath: /dev/termination-log
            imagePullPolicy: Always
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
parameters:
- description: The exposed hostname that will route to the service, if left blank a value will be defaulted
  displayName: Application Hostname
  name: APPLICATION_DOMAIN
- description: Application Name
  displayName: Application Name
  name: APP_NAME
  value: business-central
